# sap-stellar

./: .env.testnet  .gitignore  CLAUDE.md  Cargo.toml  DEMO-SCRIPT.md  README.md  SUBMISSION.md
.cargo/: config.toml
agents/: demo-runner.ts  dispute-demo.ts  full-demo.ts  package-lock.json  package.json  roster-addresses.json  roster-keypairs.json  seed-roster.ts  tsconfig.json
contracts/agent-registry/: Cargo.toml
contracts/agent-registry/src/: lib.rs
contracts/agent-registry/test_snapshots/test/: test_deactivate_reactivate.1.json  test_record_completion.1.json  test_register_agent.1.json  test_register_duplicate_fails.1.json  test_update_agent.1.json  test_withdraw_bond.1.json
contracts/reputation/: Cargo.toml
contracts/reputation/src/: lib.rs
contracts/reputation/test_snapshots/test/: test_decay.1.json  test_init_reputation.1.json  test_record_failure.1.json  test_record_success.1.json  test_specialization_tracking.1.json
contracts/work-order/: Cargo.toml
contracts/work-order/src/: lib.rs
contracts/work-order/test_snapshots/test/: test_cancel_order.1.json  test_create_order.1.json  test_full_lifecycle.1.json
dashboard/: package-lock.json  package.json  tsconfig.json  wrangler.toml
dashboard/src/: index.ts
mcp/: package-lock.json  package.json  tsconfig.json
mcp/src/: index.ts
scripts/: deploy.sh  initialize.sh
sdk/: package-lock.json  package.json
sdk/src/: client.ts  index.ts  types.ts  x402-bridge.ts
server/: package-lock.json  package.json  tsconfig.json
server/src/: index.ts
