[workspace]
resolver = "2"
members = [
    "contracts/agent-registry",
    "contracts/work-order",
    "contracts/reputation",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Matthew Karsten <MatthewKarstenConnects@gmail.com>"]
license = "MIT"

[workspace.dependencies]
soroban-sdk = "22.0.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
