[package]
name = "sap-work-order"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
sap-agent-registry = { path = "../agent-registry" }
